# wave

./: .gitignore  .pre-commit-config.yaml  CLAUDE_sched_change.md  README.md  bench_mxfp4_comparison.py  dump.mlir  ping-pong.py  pyproject.toml  requirements-iree-pinned.txt  scatter_gemm.mlir  setup.py  tdm-ping-pong.py  wave_gemm_128x128x64_d4.mlir  wave_gemm_64x64x64_d0.mlir  waveasm_regalloc_analysis.md
.github/workflows/: build_and_release.yml  ci-gpu.yaml  ci-happy.yml  ci.yaml  perf.yaml  pre-commit.yaml  pypi-publish.yml  update_iree_requirement_pins.yml
benchmark/: compare_traces.py  wave_att_analyzer.py
build_tools/: wave-dev-setup.sh
docs/: .readthedocs.yaml  README.md  merge-reads-mod-floor-fix.md  per-workgroup-srd-base-adjustment.md  scc-sgpr-promotion-investigation.md  waveasm-loop-optimization-passes.md
docs/infra/: publishing.md
docs/wave/: LDS_swizzling.rst  asm_backend.rst  getting_started.rst  ir_design_notes.rst  register_allocation.rst
examples/: gemm.py  test.py
examples/python/: 1_dynamic_mapping.py  2_control_flow.py  3_atomics.py  4_reductions.py  5_gemm.py  6.1_schedule.py  6.2_schedule.py  6.3_schedule.py  6.3_schedule_4wave.py  6.4_schedule.py  6.5_schedule.py  6_tensor_ops.py  7.1_schedule.py  7.2_mxfp4_gemm_preshuffle_scale.py  7.3_mxfp4_gemm_preshuffle_B.py  7_allocate.py  README.md  (+10 more)
water/: llvm-sha.txt
water/lib/Dialect/NormalForm/IR/: CMakeLists.txt  NormalFormDialect.cpp  NormalFormInterfaces.cpp  NormalFormOps.cpp
wave_lang/kernel/wave/asm/wave_asm/: .gitignore  CMakeLists.txt  README.md
wave_lang/kernel/wave/asm/wave_asm/docs/: architecture.md
wave_lang/kernel/wave/asm/wave_asm/include/: CMakeLists.txt
wave_lang/kernel/wave/asm/wave_asm/include/waveasm/: CMakeLists.txt
wave_lang/kernel/wave/asm/wave_asm/include/waveasm/Dialect/: CMakeLists.txt  WaveASMAttrs.h  WaveASMAttrs.td  WaveASMControlFlowOps.td  WaveASMDialect.h  WaveASMDialect.td  WaveASMInterfaces.h  WaveASMInterfaces.td  WaveASMOps.h  WaveASMOps.td  WaveASMTypes.h  WaveASMTypes.td
wave_lang/kernel/wave/asm/wave_asm/include/waveasm/Transforms/: AssemblyEmitter.h  CMakeLists.txt  Liveness.h  Passes.h  Passes.td  RegAlloc.h  RegionBuilder.h  TranslateFromMLIR.h  Utils.h
wave_lang/kernel/wave/asm/wave_asm/lib/Dialect/: CMakeLists.txt  WaveASMAttrs.cpp  WaveASMControlFlowOps.cpp  WaveASMDialect.cpp  WaveASMOps.cpp  WaveASMTypes.cpp
wave_lang/kernel/wave/asm/wave_asm/lib/Transforms/: AssemblyEmitter.cpp  BufferLoadStrengthReduction.cpp  CMakeLists.txt  HazardMitigation.cpp  LinearScanPass.cpp  LinearScanRegAlloc.cpp  LiteralMaterialization.cpp  Liveness.cpp  LoopAddressPromotion.cpp  M0RedundancyElimination.cpp  MemoryOffsetOptimization.cpp  MetadataEmitter.cpp  Peephole.cpp  RegionBuilder.cpp  ScalePackElimination.cpp  ScopedCSE.cpp  Ticketing.cpp  TranslateFromMLIR.cpp
wave_lang/kernel/wave/asm/wave_asm/lib/Transforms/handlers/: AMDGPUHandlers.cpp  AffineHandlers.cpp  ArithHandlers.cpp  CMakeLists.txt  GPUHandlers.cpp  HandlerUtils.cpp  Handlers.h  MathHandlers.cpp  MemRefHandlers.cpp  SCFHandlers.cpp  VectorHandlers.cpp
wave_lang/kernel/wave/asm/wave_asm/scripts/: build-llvm.sh
wave_lang/kernel/wave/asm/wave_asm/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
wave_lang/kernel/wave/asm/wave_asm/test/Dialect/: basic.mlir  memory-effects.mlir  region-control-flow.mlir
wave_lang/kernel/wave/asm/wave_asm/test/Integration/: CMakeLists.txt  compile-and-assemble.mlir  dump_mlir.py  functional_test.cpp  run_kernel.py
wave_lang/kernel/wave/asm/wave_asm/test/Integration/reference/: mma_kernel_reference.txt
wave_lang/kernel/wave/asm/wave_asm/test/Transforms/: buffer-load-strength-reduction.mlir  copy-kernel.mlir  emit-assembly.mlir  expr-cse.mlir  floor-ops.mlir  hazard-mitigation.mlir  licm.mlir  linear-scan-ifop-bug.mlir  linear-scan-stress.mlir  linear-scan.mlir  lit-accvgpr-assembly-emit.mlir  lit-accvgpr-data-movement.mlir  lit-accvgpr-negative.mlir  lit-end-to-end.mlir  lit-hazard.mlir  lit-iree-handlers.mlir  lit-regalloc.mlir  lit-scoped-cse.mlir  lit-translate.mlir  lit-waitcnt.mlir  liveness-cfg.mlir  liveness.mlir  loop-address-promotion.mlir  loop-pressure-regression.mlir  loop-result-liveness.mlir  m0-redundancy-elim.mlir  memory-offset-opt.mlir  memory-ops.mlir  mfma-kernel.mlir  mfma-tied-operands.mlir  multi-target.mlir  peephole.mlir  pipelined-triple-buffer.mlir  regalloc.mlir  region-based-translation.mlir  region-cf-integration.mlir  salu-vop2-literals.mlir  scale-pack-elimination.mlir  scoped-cse.mlir  srd-management.mlir  (+7 more)
wave_lang/kernel/wave/asm/wave_asm/test/Translate/: amdgpu-mfma.mlir  arith-constants.mlir  g2s-prologue-epilogue.mlir  gpu-handlers.mlir  handlers-test.mlir  lds-alloc-epilogue.mlir  lds-alloc-offset-tracking.mlir  lds-barrier.mlir  mfma-handlers-test.mlir  pipelined-lds-load.mlir  rocdl-handlers.mlir  scaled-mfma-pipelined.mlir  scf-for-iter-args.mlir  scf-for-loop.mlir  translate-gpu-threadid.mlir  vector-load-store.mlir
wave_lang/kernel/wave/asm/wave_asm/test/e2e/: README.md  __init__.py  compare_all.py  compare_all_kernels.py  compare_backends.py  compare_gemm.py  compare_mma_backends.py  conftest.py  extract_mlir.py  run_cpp_backend_e2e.py  test_asm_backend_e2e.py  test_copy_kernel.py  waveasm_e2e.py
wave_lang/kernel/wave/asm/wave_asm/tools/: CMakeLists.txt
wave_lang/kernel/wave/asm/wave_asm/tools/waveasm-translate/: CMakeLists.txt  waveasm-translate.cpp
waveasm/: waveasm_e2e.py
(+453 files in other folders)
